<resources>
    <string name="app_name">AutoserviceMobile</string>
    <string name="cart_title">Корзина</string>
    <string name="registrations_title">Записи и заявки</string>
    <string name="home_title">Главная</string>
    <string name="loyalty_title">Программа лояльности</string>

    <string name="loyalty_nav_title">Бонусы</string>

    <string name="profile_title">Профиль</string>
    <string name="location_title">Автосервисы рядом</string>
    <string name="location_description">Найти сервис поблизости</string>
    <string name="cars_title">Мои автомобили</string>
    <string name="user_data_title">Мои данные</string>
    <string name="map_title">Cервисы поблизости</string>

    <string name="services_title">Услуги</string>
    <string name="products_title">Товары</string>
    <string name="services_recom">Услуги для вас</string>
    <string name="products_recom">Товары для вас</string>

    <string name="to_cart">В корзину</string>
    <string name="from_cart">Удалить</string>
    <string name="anavailable_title">Недоступны для оформления</string>
    <string name="load_more_btn_text">Узнать больше</string>
    <string name="favorites_text">Избранное</string>
    <string name="faq">Часто задаваемые запросы</string>
    <string name="call">Позвонить</string>
    <string name="email">Написать</string>

    <string name="default_car_title">Выбранное авто</string>
    <string name="your_cars_text">Ваши авто</string>

    <string name="no_connection_text">Нет соединения с интернетом</string>
    <string name="no_content_text">Ничего не найдено</string>
    <string name="no_content_services_text">По вашему запросу ничего не найдено</string>
    <string name="no_content_reqistrations_text">Похоже, что вы еще не пользовались нашим сервисом</string>
    <string name="no_content_cart_text">Ваша корзина пуста</string>
    <string name="no_slots_text">Для выбранной даты нет доступного времени для записи</string>
    <string name="slots_set_date_text">Выбрать другую дату</string>
    <string name="error_text">Ошибка</string>
    <string name="error_cart_text">Упс...</string>
    <string name="error_services_text">Печалька</string>
    <string name="error_registrations_text">Увы</string>

    <string name="close_registration_text">Отменить запись</string>
    <string name="channel_name">main_channel</string>
    <string name="channel_description">main channel with high priority</string>

    <string name="select_station">Выбрать этот сервис</string>
    <string name="station_is_selected">Сервис выбран</string>
</resources>